corrections made for the dark mode

--- a/css/body_header_footer_styling.css
+++ b/css/body_header_footer_styling.css
@@ -22,10 +22,63 @@ header figure{
     width: 15%;
     margin: 0px;
 }
-header #themeBtn{
+#moon{
     width: 30px;
-    margin: 2% 5% 0 auto;
+    height: 30px;
+    margin: 1% 5% 0 0%;
 }
+#sun{
+    width: 40px;
+    height: 40px;
+    margin: 1% 0% 0% auto;
+    opacity: 0;
+}
+.theme-switch-wrapper {
+    display: flex;
+    margin: 1% 1% 0 1%;
+}
+.theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+}
+.theme-switch input {
+    display:none;
+}
+.slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+}
+.slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+}
+input:checked + .slider {
+    background-color: #000000;
+}
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+.slider.round {
+    border-radius: 34px;
+}  
+.slider.round:before {
+    border-radius: 50%;
+}
+
 .menubtn{
     margin-right: 5%;
 }
