--- a/css/template.css
+++ b/css/template.css
@@ -33,7 +33,6 @@ main{
 #first-part figure{
     margin: 0px;
     padding: 0px;
-    width: 100%;
     max-width: 600px;
     margin-right: -3%;
     margin-left: auto;
@@ -215,6 +214,7 @@ main{
         display: none;
         background-color: rgb(231, 231, 231);
         color: rgb(0,0,128);
+        font-size: 0.7em;
     }
     #detailsDiv{
         display: flex;
@@ -242,6 +242,11 @@ main{
     #third-part #aboutCom{
         border-left: 4px solid rgb(0,0,128);
         padding-left: 2%;
+    }
+}
+@media screen and (min-width:1100px){
+    #desk-degreebtn, #desk-contactbtn, #desk-aboutbtn{
+        font-size: 1.1em;
     }
 }
 @media screen and (min-width:1200px){
